
 Total files count:    
 Total lines count: 

 New features and improvements:

   Core DB Model v37

   - Balance check: distinguish between rough, validated and future balances (todo #1392).
   - Display unsettled entries on settleable accounts (todo #1381).
   - Display unreconciliated entries on reconciliable accounts (todo #783).
   - Export the FEC file (LPF - Article A47 A-1).
   - Reconciliation page auto-updates when an external identifier changes (todo #1407).

 Bug fixes:

   - myICollectionable: make sure the dataset is loaded before first insertion.
   - ofaAccountFrameBin: fix notebook size when the dataset is empty.
   - ofaAccountPage: fix page display when the dataset is empty.
   - ofaAccountStore: let the treeview be repopulated on collection reload.
   - ofaOpeTemplateFrameBin: fix notebook size when the dataset is empty.
   - ofaOpeTemplatePage: fix page display when the dataset is empty.
   - ofaOpeTemplateStore: let the treeview be repopulated on collection reload.

 Other changes:

   - Clarify the reference management of the collection (todo #1359).
   - ofaAccentryStore: new class.
   - ofaAccentryTreeview: new class.
   - ofaUnreconcilPage: new class.
   - ofaUnsettledPage: new class.
   - ofoEntry: status is stored in DBMS as a char indicator (todo #1414).

-----------------------------------------------------------------------
 Version 0.68
 ============

 Released on 2017-03-21

 Total files count:    798
 Total lines count: 532196

 New features and improvements:

   Core DB Model v36
   Recurrent DB Model v9

   - CheckDBMSIntegrity: errors are displayed in red (todo #1395).
   - ClosingParms: improve account check (todo #513).
   - EntryPage: have an extended filter (todo #733).
   - EntryPage: may be opened several times.
   - ExerciceCloseAssistant: archive opening accounts balances (todo #1388).
   - Improve error messages when entering an operation (todo #1356).